# snake-game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
src/: draw.cpp  draw.h  game.cpp  game.h  game_input.cpp  game_input.h  game_structs.h  main.cpp  window.cpp  window.h
